# haskell-gtd-nl

./: .gitignore  cabal.project.freeze  haskell-gtd.cabal
app/debug/: Main.hs
extension/: haskell-gtd-nl-0.3.4.vsix  package-lock.json
src/GTD/: Utils.hs
src/GTD/Cabal/: Cache.hs  FindAt.hs
src/GTD/Haskell/Parser/: GhcLibParser.hs
src/GTD/Resolution/: Package.hs  Utils.hs
