cabal-version:      2.4
name:               haskell-gtd
version:            0.0.3.3
author:             dbaynak
extra-source-files: CHANGELOG.md

-- add the following line to `ghc-options` to enable profiling
-- -fprof-auto -rtsopts "-with-rtsopts=-N -A16M -p -s -h -l -i0.1"

common common-deps
    default-language: Haskell2010
    build-depends:
        base >= 4.16 && < 5,

        Cabal >= 3.12.1,
        binary >= 0.8.9,
        bytestring >= 0.12.1,
        deepseq >= 1.5.0,
        containers >= 0.6.8,
        directory >= 1.3.9,
        filepath >= 1.5.3,
        mtl >= 2.3.1,
        transformers >= 0.6.1,
        unix >= 2.8.5,
        time >= 1.12.2,
        text >= 2.1.1,
        process >= 1.6.25,
        aeson >= 2.2.3,
        random >= 1.2.1,
        hashable >= 1.4.7,
        unordered-containers >= 0.2.20,
        optparse-applicative >= 0.18.1,
        aeson-pretty >= 0.8.10,
        async >= 2.2.5,
        cabal-install >= 3.12.1,
        network >= 3.2.4,
        regex-posix >= 0.96.0,
        safe-exceptions >= 0.1.7,
        cpphs >= 1.20.9,
        either >= 5.0.2,
        ghc-lib-parser >= 9.8,
        lens >= 5.3.2,
        lifted-async >= 0.10.2,
        lifted-base >= 0.2.3,
        monad-control >= 1.0.3,
        lrucache >= 1.2.0,
        monad-logger >= 0.3.40,
        regex >= 1.1.0,
        utf8-string >= 1.0.2,
        syb >= 0.7.2,
        unliftio >= 0.2.25,
        graphviz >= 2999.20.2,
        servant >= 0.20.2,
        servant-server >= 0.20.2,
        warp >= 3.4.3,

executable haskell-gtd-nl-debug
    import:           common-deps
    main-is:          Main.hs
    build-depends:
        haskell-gtd

        , graphviz

    hs-source-dirs:   app/debug

    ghc-options: -O2 -g1 -threaded -Wall -rtsopts "-with-rtsopts=-N -A128M -T"

executable haskell-gtd-nl-server
    import:           common-deps
    main-is:          Main.hs
    build-depends:
        haskell-gtd

        , network
        , servant
        , servant-server
        , warp

    hs-source-dirs:   app/server

    ghc-options: -O2 -g1 -threaded -Wall -rtsopts "-with-rtsopts=-N -A1M -T"

executable haskell-gtd-nl-parser
    import:           common-deps
    main-is:          Main.hs
    build-depends:
        haskell-gtd

    hs-source-dirs:   app/package

    ghc-options: -O2 -g1 -threaded -Wall -rtsopts "-with-rtsopts=-N -A128M -T"

library
    import:           common-deps
    hs-source-dirs:   src

    exposed-modules:
        GTD.Cabal
        GTD.Cabal.Cache
        GTD.Cabal.Dependencies
        GTD.Cabal.FindAt
        GTD.Cabal.Get
        GTD.Cabal.Parse
        GTD.Cabal.Types
        GTD.Configuration
        GTD.Haskell.Cpphs
        GTD.Haskell.Declaration
        GTD.Haskell.Lines
        GTD.Haskell.Module
        GTD.Haskell.Parser.GhcLibParser
        GTD.Resolution.Cache
        GTD.Resolution.Caching.Utils
        GTD.Resolution.Module
        GTD.Resolution.Module.Single
        GTD.Resolution.Module.Multi
        GTD.Resolution.Module.Utils
        GTD.Resolution.Package
        GTD.Resolution.Types
        GTD.Resolution.Utils
        GTD.Server
        GTD.Server.Cpphs
        GTD.Server.Definition
        GTD.Server.DropPackageCache
        GTD.Server.Usages
        GTD.State
        GTD.Utils
        GTD.Utils.OS.Memory
        Paths_haskell_gtd

    ghc-options: -O2 -g1 -Wall

test-suite haskell-gtd-nl-tests
    import: common-deps

    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Spec.hs
    build-depends:
        haskell-gtd
        , QuickCheck ^>= 2.14.3
        , hspec ^>= 2.11.1
    build-tool-depends: hspec-discover:hspec-discover
    ghc-options: -O2 -g1 -Wall
